# react_note_test

./: .gitignore  README.md
backend/: pyproject.toml
backend/test_react/: main.py  notes.db
backend/tests/: test_notes.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: NoteForm.js  NoteItem.js  NotesList.js
